Adding platform to the build
This will help ensure that changes to common code does not break the platform build.